# robot-auto-policy

./: .env.example  .gitignore  README.md  program.md  pyproject.toml
.raindrop/: agents.yaml
adapters/: __init__.py  base.py  registry.py
agents/: __init__.py  motion_reference.py  openai_client.py  openai_planner.py  planner.py  reviewer.py  scenario_agent.py  subagents.py  video_context.py  video_motion_imitation.py
assets/: README.md  h1_isaac_reference.usda  h1_robot_spec.json
core/: __init__.py  artifact_ingest.py  artifact_sync.py  autoresearch_loop.py  experiment_db.py  orchestration.py  patch_validator.py  raindrop_trace.py  schemas.py  scoring.py
dashboard/: __init__.py  app.py
docs/: agent_eval_workshop.md  implementation_log.md  modal_guardian.md  motion_references.md  openai_setup.md  phase1_runbook.md  problem_we_are_solving_script.md
eval/: __init__.py  fixed_eval_seeds.json  locomotion_score.py  safety_checks.py
modal_runner/: __init__.py  blender_h1_render.py  deployed.py  evaluate.py  modal_app.py  phase1.py  render.py  train.py
specs/: eval_spec.schema.json  patch_spec.schema.json  robot_spec.schema.json  scenario_spec.schema.json  task_spec.schema.json
tests/: test_artifact_ingest.py  test_artifact_sync.py  test_autoresearch_loop.py  test_autoresearch_orchestrator.py  test_dashboard_run_review.py  test_dataset_import.py  test_deployed_submit.py  test_evaluate_rsl_rl_policy.py  test_manipulation_adapter.py  test_modal_app_metrics.py  test_modal_artifact_status.py  test_modal_guardian.py  test_motion_reference.py  test_openai_planner.py  (+11 more)
(+78 files in other folders)
