[project]
name = "robot-auto-policy"
version = "0.1.0"
description = "RoboGenesis autonomous AutoResearch loop for robot policy training."
requires-python = ">=3.11"
dependencies = [
  "modal>=1.0.0",
  "openai>=1.90.0",
  "pyyaml>=6.0.1",
  "raindrop-ai>=0.0.50",
]

[project.optional-dependencies]
dev = [
  "imageio>=2.33",
  "imageio-ffmpeg>=0.4",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pytest>=8.0.0",
]
dashboard = [
  "streamlit>=1.35.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
